bk_ida/gccida/g1/dw2_asm_output_encoded_addr_rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dw2_asm_output_encoded_addr_rtx/src/dwarf2asm.c:1333:31: error: use of undeclared identifier 'machine_mode'
v9 = gen_rtx_fmt_ee( MINUS, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v4, global_rtl[0]); 
                              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dw2_asm_output_encoded_addr_rtx/src/obj/dwarf2asm.o] Error 1
